[plugins] a common way to initialize plugins; pre-defined list of plugins in PluginGroupDescription
GitOrigin-RevId: c59ce90f0daaff2d843643100765e125f64ae13c